--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend
+# Default ClickHouse config (can be overridden from UI)
+clickhouse.host=localhost
+clickhouse.port=8123
+clickhouse.database=default
+clickhouse.user=default
+clickhouse.password=
